--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc"
+  },
   "devDependencies": {
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
-  }
+  },
+  "dependencies": {}
 }
